Fixed an additional hasLayout issue in IE
darcs-hash:20070907001911-1d602-14c272f4ed403188bb22601250e696766b7e5fa6.gz

--- a/media/css/ie.css
+++ b/media/css/ie.css
@@ -1,2 +1,2 @@
 /* Invoke the dark, proprietary art of hasLayout */
-div.tools, div.post { zoom: 1; }
+#userbar, div.tools, div.post { zoom: 1; }
